istio/_back/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"https":"HTTP2"}'
    #cloud.google.com/backend-config: '{"default": "ingress-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: istio-ingressgateway
  name: istio-ingressgateway
  namespace: istio-system
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 8080
  #- name: https
  #  port: 443
  #  protocol: TCP
  #  targetPort: 8443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: ClusterIP
